# CSCI251-Advanced-Programming-Assignments

./: Assignment2.cbp  Candidate.cpp  Candidate.h  ElectoralEntities.cpp  ElectoralEntities.h  Issue.h  Leader.h  Output.txt  People.cpp  People.h  PoliticalParty.h  README.md  Stance.cpp  header.cpp  header.h  makefile  readme.md  test.uxf
Assignment 1/: CMakeLists.txt  driver.cpp  makefile
Assignment 2/: 8116775_McMillan_a2-CSCI251.docx  Assignment2.code-workspace  Assignment2.depend  Assignment2.layout  CMakeLists.txt  EventManagement.cpp  EventManagement.h  Issue.cpp  Leader.cpp  PoliticalParty.cpp  README.md  Stance.h  main.cpp  test-Mickyb-Desktop.uxf
Assignment 3/: CMakeLists.txt  header.cpp  main.cpp  makefile
